# vektor-ds

./: AUTHORS  LICENSE  Makefile.in  configure  configure.ac
src/: Makefile.am  Makefile.in  vektor-ds.c  vektor-ds.h
